--- a/Assignment2-MobileApp-By-PonhvathVann-1502538/app/src/main/res/values/strings.xml
+++ b/Assignment2-MobileApp-By-PonhvathVann-1502538/app/src/main/res/values/strings.xml
@@ -1,6 +1,4 @@
 <resources>
     <string name="app_name">Assignment2-PonhvathVann-1502538</string>
-    <string name="title_activity_tab">TabActivity</string>
-    <string name="tab_text_1">Tab 1</string>
-    <string name="tab_text_2">Tab 2</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
