--- a/Assignment2-MobileApp-By-PonhvathVann-1502538/app/src/main/res/values/strings.xml
+++ b/Assignment2-MobileApp-By-PonhvathVann-1502538/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Assignment2-PonhvathVann-1502538</string>
     <string name="title_activity_maps">Map</string>
+    <string name="title_activity_mini_project">Map</string>
 </resources>
